# chromium

./: README.md
www/chromium/: Makefile  distinfo  pkg-plist
www/chromium/files/: extra-patch-build_config_compiler_pgo_pgo.gni  patch-3p-pdfium_3p_base_allocator_partition__allocator_page__allocator__internals__posix.h  patch-BUILD.gn  patch-apps_app__restore__service__browsertest.cc  patch-ash_display_mirror__window__controller.cc  patch-base_BUILD.gn  patch-base_allocator_allocator__shim__default__dispatch__to__glibc.cc  patch-base_allocator_allocator__shim__unittest.cc  patch-base_allocator_partition__allocator_address__pool__manager.cc  patch-base_allocator_partition__allocator_page__allocator__internals__posix.h  patch-base_allocator_partition__allocator_partition__alloc__config.h  patch-base_allocator_partition__allocator_partition__alloc__unittest.cc  patch-base_allocator_partition__allocator_partition__root.cc  patch-base_allocator_partition__allocator_spinning__mutex.cc  patch-base_allocator_partition__allocator_spinning__mutex.h  patch-base_base__switches.cc  patch-base_base__switches.h  patch-base_cpu.cc  patch-base_cpu.h  patch-base_debug_debugger__posix.cc  patch-base_debug_elf__reader.cc  patch-base_debug_stack__trace.h  patch-base_debug_stack__trace__posix.cc  patch-base_debug_stack__trace__unittest.cc  patch-base_files_file__path__unittest.cc  patch-base_files_file__path__watcher.cc  patch-base_files_file__path__watcher__stub.cc  patch-base_files_file__path__watcher__unittest.cc  patch-base_files_file__util.h  patch-base_files_file__util__posix.cc  patch-base_files_file__util__unittest.cc  patch-base_files_important__file__writer__cleaner.cc  patch-base_files_scoped__file.cc  patch-base_i18n_icu__util.cc  patch-base_location__unittest.cc  patch-base_logging__unittest.cc  patch-base_memory_madv__free__discardable__memory__posix.cc  patch-base_memory_platform__shared__memory__region.h  patch-base_memory_platform__shared__memory__region__posix.cc  patch-base_numerics_safe__math__shared__impl.h  (+596 more)
