--- cc/BUILD.gn.orig	2020-10-07 16:38:34 UTC
+++ cc/BUILD.gn
@@ -611,7 +611,7 @@ cc_test_static_library("test_support") {
   if (enable_vulkan) {
     deps += [ "//gpu/vulkan/init" ]
   }
-  if (!is_android) {
+  if (!is_android && !is_bsd) {
     data_deps = [ "//third_party/mesa_headers" ]
   }
 }
@@ -817,7 +817,6 @@ cc_test("cc_unittests") {
   ]
   data_deps = [
     "//testing/buildbot/filters:cc_unittests_filters",
-    "//third_party/mesa_headers",
   ]
 
   defines = []
