--- chrome/BUILD.gn.orig	2021-12-14 11:44:55 UTC
+++ chrome/BUILD.gn
@@ -282,7 +282,9 @@ if (!is_android && !is_mac) {
           ":xdg_mime",  # Needs to be public for installer to consume files.
         ]
 
-        data_deps += [ "//components/crash/core/app:chrome_crashpad_handler" ]
+        if (!is_bsd) {
+          data_deps += [ "//components/crash/core/app:chrome_crashpad_handler" ]
+        }
       }
 
       ldflags = []
@@ -1392,7 +1394,7 @@ group("browser_dependencies") {
     ]
   }
 
-  if (!is_fuchsia) {
+  if (!is_fuchsia && !is_bsd) {
     public_deps += [ "//components/crash/core/app" ]
   }
 
@@ -1707,7 +1709,7 @@ if (is_win && enable_resource_allowlist_generation) {
 }
 
 if (is_linux || is_chromeos) {
-  if (is_official_build) {
+  if (is_official_build && !is_bsd) {
     group("linux_symbols") {
       deps = [
         ":angle_egl_symbols",
