--- chrome/browser/extensions/BUILD.gn.orig	2020-10-07 16:38:38 UTC
+++ chrome/browser/extensions/BUILD.gn
@@ -1226,6 +1226,12 @@ static_library("extensions") {
     deps += [ "//chrome/common:service_process_mojom" ]
   }
 
+  if (is_bsd) {
+    sources -= [
+      "api/image_writer_private/removable_storage_provider_linux.cc",
+    ]
+  }
+
   if (enable_service_discovery) {
     sources += [
       "api/mdns/mdns_api.cc",
