--- chrome/common/BUILD.gn.orig	2020-10-07 16:38:40 UTC
+++ chrome/common/BUILD.gn
@@ -253,6 +253,11 @@ static_library("common") {
     public_deps += [ "//ppapi/shared_impl" ]
   }
 
+  if (is_bsd) {
+    sources -= [ "component_flash_hint_file_linux.cc" ]
+    deps -= [ "//components/crash/core/app" ]
+  }
+
   if (enable_extensions) {
     sources += [
       "cast_messages.cc",
