--- chrome/common/BUILD.gn.orig	2020-11-13 06:36:38 UTC
+++ chrome/common/BUILD.gn
@@ -250,6 +250,10 @@ static_library("common") {
     public_deps += [ "//ppapi/shared_impl" ]
   }
 
+  if (is_bsd) {
+    deps -= [ "//components/crash/core/app" ]
+  }
+
   if (enable_extensions) {
     sources += [
       "cast_messages.cc",
@@ -487,7 +491,7 @@ static_library("common") {
     public_deps += [ "//chrome/common/safe_browsing" ]
   }
 
-  if (is_linux || is_chromeos) {
+  if ((is_linux || is_chromeos) && !is_bsd) {
     sources += [
       "auto_start_linux.cc",
       "auto_start_linux.h",
