--- chrome/test/BUILD.gn.orig	2020-10-07 16:38:40 UTC
+++ chrome/test/BUILD.gn
@@ -6375,7 +6375,7 @@ test("chrome_app_unittests") {
     "//components/safe_browsing:buildflags",
     "//pdf:pdf_ppapi",
   ]
-  if (!is_fuchsia) {
+  if (!is_fuchsia && !is_bsd) {
     # TODO(crbug.com/753619): Enable crash reporting on Fuchsia.
     deps += [ "//third_party/breakpad:client" ]
   }
