--- components/BUILD.gn.orig	2020-10-07 16:38:42 UTC
+++ components/BUILD.gn
@@ -303,9 +303,14 @@ test("components_unittests") {
     ]
 
     if (!is_fuchsia) {
+      if (!is_bsd) {
+        deps += [
+          "//components/crash/content/browser:unit_tests",
+          "//components/crash/core/app:unit_tests",
+        ]
+     }
+        
       deps += [
-        "//components/crash/content/browser:unit_tests",
-        "//components/crash/core/app:unit_tests",
         "//components/data_reduction_proxy/core/browser:unit_tests",
         "//components/data_reduction_proxy/core/common:unit_tests",
       ]
