--- components/metrics/BUILD.gn.orig	2021-12-07 05:33:26 UTC
+++ components/metrics/BUILD.gn
@@ -186,6 +186,11 @@ static_library("metrics") {
   if (is_fuchsia) {
     sources += [ "drive_metrics_provider_fuchsia.cc" ]
   }
+  
+  if (is_bsd) {
+    sources -= [ "system_memory_stats_recorder_linux.cc" ]
+  }
+
 }
 
 if (is_android) {
