--- content/common/BUILD.gn.orig	2020-11-13 06:36:42 UTC
+++ content/common/BUILD.gn
@@ -328,6 +328,12 @@ source_set("common") {
     libs += [ "android" ]
   }
 
+  if (is_bsd) {
+    sources -= [
+      "sandbox_init_linux.cc",
+    ]
+  }
+
   if (is_debug && !is_component_build && enable_plugins) {
     # Content depends on the PPAPI message logging stuff; if this isn't here,
     # some unit test binaries won't compile. This only worked in release mode
