--- content/shell/BUILD.gn.orig	2020-11-13 06:36:43 UTC
+++ content/shell/BUILD.gn
@@ -505,7 +505,7 @@ if (is_android) {
       }
     }
 
-    if (is_win || is_linux || is_chromeos) {
+    if ((is_win || is_linux || is_chromeos) && !is_bsd) {
       data_deps +=
           [ "//third_party/crashpad/crashpad/handler:crashpad_handler" ]
     }
@@ -798,7 +798,7 @@ group("content_shell_crash_test") {
   if (is_win) {
     data_deps += [ "//build/win:copy_cdb_to_output" ]
   }
-  if (is_posix) {
+  if (is_posix && !is_bsd) {
     data_deps += [
       "//third_party/breakpad:dump_syms",
       "//third_party/breakpad:minidump_stackwalk",
