--- content/utility/BUILD.gn.orig	2021-12-07 05:33:29 UTC
+++ content/utility/BUILD.gn
@@ -103,7 +103,7 @@ source_set("utility") {
     deps += [ "//services/proxy_resolver:lib" ]
   }
 
-  if (is_linux || is_chromeos) {
+  if ((is_linux || is_chromeos) && !is_bsd) {
     deps += [
       "//content/utility/speech:speech_recognition_sandbox_hook",
       "//services/network:network_sandbox_hook",
