--- mojo/core/BUILD.gn.orig	2021-12-07 05:33:32 UTC
+++ mojo/core/BUILD.gn
@@ -127,7 +127,7 @@ template("core_impl_source_set") {
         ]
       }
 
-      if ((is_linux || is_chromeos || is_android) && !is_nacl) {
+      if ((is_linux || is_chromeos || is_android) && !is_nacl && !is_bsd) {
         sources += [
           "channel_linux.cc",
           "channel_linux.h",
