--- net/dns/BUILD.gn.orig	2021-12-07 05:33:33 UTC
+++ net/dns/BUILD.gn
@@ -111,7 +111,7 @@ source_set("dns") {
       "dns_config_service_android.cc",
       "dns_config_service_android.h",
     ]
-  } else if (is_linux) {
+  } else if (is_linux && !is_bsd) {
     sources += [
       "dns_config_service_linux.cc",
       "dns_config_service_linux.h",
