--- sandbox/policy/BUILD.gn.orig	2020-10-07 16:38:49 UTC
+++ sandbox/policy/BUILD.gn
@@ -27,7 +27,7 @@ component("policy") {
     "//base",
     "//sandbox:common",
   ]
-  if (is_linux || is_chromeos) {
+  if ((is_linux || is_chromeos) && !is_bsd) {
     sources += [
       "linux/bpf_audio_policy_linux.cc",
       "linux/bpf_audio_policy_linux.h",
