--- third_party/blink/renderer/BUILD.gn.orig	2021-12-31 00:57:40 UTC
+++ third_party/blink/renderer/BUILD.gn
@@ -51,6 +51,12 @@ config("inside_blink") {
     ]
   }
 
+  if (is_bsd) {
+    cflags += [
+      "-Wno-implicit-int-float-conversion",
+    ]
+  }
+
   configs = [ "//build/config/compiler:noshadowing" ]
 }
 
