--- third_party/blink/renderer/platform/BUILD.gn.orig	2020-10-07 16:38:51 UTC
+++ third_party/blink/renderer/platform/BUILD.gn
@@ -102,6 +102,7 @@ executable("character_data_generator") {
     "//build/win:default_exe_manifest",
     "//third_party/icu",
   ]
+  libs = [ "cxxrt" ]
 }
 
 # This isn't strictly necessary since we can just add the deps to "platform",
