--- third_party/crashpad/crashpad/client/BUILD.gn.orig	2021-12-07 05:34:19 UTC
+++ third_party/crashpad/crashpad/client/BUILD.gn
@@ -48,6 +48,12 @@ crashpad_static_library("client") {
     ]
   }
 
+  if (crashpad_is_posix) {
+    sources += [
+      "crashpad_client_posix.cc",
+    ]
+  }
+
   if (crashpad_is_linux || crashpad_is_android || crashpad_is_fuchsia) {
     sources += [
       "client_argv_handling.cc",
