--- third_party/usrsctp/BUILD.gn.orig	2020-11-13 06:37:04 UTC
+++ third_party/usrsctp/BUILD.gn
@@ -127,7 +127,7 @@ static_library("usrsctp") {
     "-UINET6",
   ]
 
-  if (is_linux || is_chromeos || is_android) {
+  if ((is_linux || is_chromeos || is_android) && !is_bsd) {
     defines += [
       "__Userspace_os_Linux",
       "_GNU_SOURCE",
@@ -137,6 +137,11 @@ static_library("usrsctp") {
       "HAVE_SA_LEN",
       "__APPLE_USE_RFC_2292",
       "__Userspace_os_Darwin",
+    ]
+  } else if (is_bsd) {
+    cflags += [ "-U__FreeBSD__" ]
+    defines += [
+      "__Userspace_os_FreeBSD",
     ]
   }
 
