--- third_party/wayland/features.gni.orig	2021-09-25 09:07:16 UTC
+++ third_party/wayland/features.gni
@@ -13,8 +13,8 @@ declare_args() {
                           default_toolchain != "//build/toolchain/cros:target"
 
   # Path to wayland-scanner. Has effect only when the system libwayland is used.
-  assert(host_os == "linux")
-  system_wayland_scanner_path = "/usr/bin/wayland-scanner"
+  assert(host_os == "freebsd")
+  system_wayland_scanner_path = "%%PREFIX%%/bin/wayland-scanner"
 
   # This may be set by Chromium packagers who do not wish to use the bundled
   # wayland scanner.
