--- third_party/webrtc/BUILD.gn.orig	2020-10-07 16:40:41 UTC
+++ third_party/webrtc/BUILD.gn
@@ -176,6 +176,9 @@ config("common_inherited_config") {
   if (is_linux) {
     defines += [ "WEBRTC_LINUX" ]
   }
+  if (is_bsd) {
+    defines += [ "WEBRTC_BSD" ]
+  }
   if (is_mac) {
     defines += [ "WEBRTC_MAC" ]
   }
