--- third_party/webrtc/system_wrappers/BUILD.gn.orig	2020-10-07 16:40:42 UTC
+++ third_party/webrtc/system_wrappers/BUILD.gn
@@ -60,8 +60,6 @@ rtc_library("system_wrappers") {
     if (!build_with_chromium) {
       deps += [ ":cpu_features_linux" ]
     }
-
-    libs += [ "rt" ]
   }
 
   if (is_win) {
