--- v8/BUILD.gn.orig	2020-11-13 06:42:28 UTC
+++ v8/BUILD.gn
@@ -4068,9 +4068,15 @@
     }
   }
 
-  if (is_linux || is_chromeos) {
+  if (is_bsd) {
     sources += [
       "src/base/debug/stack_trace_posix.cc",
+      "src/base/platform/platform-freebsd.cc",
+    ]
+    libs = [ "rt", "execinfo" ]
+  } else if (is_linux || is_chromeos) {
+    sources += [
+      "src/base/debug/stack_trace_posix.cc",
       "src/base/platform/platform-linux.cc",
     ]
 
@@ -4507,6 +4513,7 @@
       "src/snapshot/mksnapshot.cc",
       "src/snapshot/snapshot-empty.cc",
     ]
+    libs = ["execinfo"]
 
     if (v8_control_flow_integrity) {
       sources += [ "src/deoptimizer/deoptimizer-cfi-empty.cc" ]
