--- v8/BUILD.gn.orig	2021-12-14 11:47:21 UTC
+++ v8/BUILD.gn
@@ -5058,9 +5058,15 @@ v8_component("v8_libbase") {
     }
   }
 
-  if (is_linux || is_chromeos) {
+  if (is_bsd) {
     sources += [
       "src/base/debug/stack_trace_posix.cc",
+      "src/base/platform/platform-freebsd.cc",
+    ]
+    libs = [ "rt", "execinfo" ]
+  } else if (is_linux || is_chromeos) {
+    sources += [
+      "src/base/debug/stack_trace_posix.cc",
       "src/base/platform/platform-linux.cc",
     ]
 
@@ -5622,6 +5628,7 @@ if (current_toolchain == v8_generator_toolchain) {
       "src/interpreter/bytecodes.cc",
       "src/interpreter/bytecodes.h",
     ]
+    libs = ["execinfo"]
 
     configs = [ ":internal_config" ]
 
