--- weblayer/BUILD.gn.orig	2020-10-07 16:39:11 UTC
+++ weblayer/BUILD.gn
@@ -645,6 +645,14 @@ source_set("weblayer_lib_base") {
     ]
   }
 
+  if (is_bsd) {
+    deps -= [
+      "//components/crash/content/browser",
+      "//components/crash/core/app",
+      "//components/crash/core/common",
+    ]
+  }
+
   if (toolkit_views) {
     deps += [ "//ui/views" ]
   }
