--- weblayer/BUILD.gn.orig	2021-12-07 05:34:24 UTC
+++ weblayer/BUILD.gn
@@ -793,6 +793,14 @@ source_set("weblayer_lib_base") {
     ]
   }
 
+  if (is_bsd) {
+    deps -= [
+      "//components/crash/content/browser",
+      "//components/crash/core/app",
+      "//components/crash/core/common",
+    ]
+  }
+
   if (toolkit_views) {
     deps += [ "//ui/views" ]
   }
