--- weblayer/BUILD.gn.orig	2021-12-14 11:45:40 UTC
+++ weblayer/BUILD.gn
@@ -793,6 +793,14 @@ source_set("weblayer_lib_base") {
     ]
   }
 
+  if (is_bsd) {
+    deps -= [
+      "//components/crash/content/browser",
+      "//components/crash/core/app",
+      "//components/crash/core/common",
+    ]
+  }
+
   if (toolkit_views) {
     deps += [ "//ui/views" ]
   }
